# invex

./: .gitignore  PROGRESS.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_interactive.py
invex-saas/: start_backend.ps1
invex-saas/backend/: .env  Dockerfile  config.py  main.py  requirements.txt
invex-saas/backend/models/: api_models.py
invex-saas/backend/routers/: agent_router.py  document_router.py  market_router.py  news_router.py  session_router.py
invex-saas/backend/services/: crew_service.py  news_service.py  session_service.py
invex-saas/frontend/: index.html  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
invex-saas/frontend/.next/: app-build-manifest.json  trace
invex-saas/frontend/.next/server/: _error.js  app-paths-manifest.json  server-reference-manifest.json  webpack-runtime.js
invex-saas/frontend/app/: globals.css  layout.tsx  page.tsx
invex-saas/frontend/app/advisors/: page.tsx
invex-saas/frontend/app/analysis/: layout.tsx  page.tsx
invex-saas/frontend/app/chat/: layout.tsx  page.tsx
invex-saas/frontend/app/dashboard/: layout.tsx  page.tsx
invex-saas/frontend/app/login/: page.tsx
invex-saas/frontend/src/: App.tsx  index.css
outputs/: invex_report.md  invex_report_20251019_225706.md  invex_report_20251019_233324.md  invex_report_20251019_234955.md  invex_report_20251020_002823.md
src/invex/: crew.py  main.py  tools.py
src/invex/config/: agents.yaml  tasks.yaml
src/invex/tools/: __init__.py  crypto_tools.py  economic_tools.py  gold_tools.py  mutual_fund_tools.py  stock_tools.py
(+113 files in other folders)
